# Quantum-Gravitometer

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GUIDE.md  PROJECT_SPEC.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: docs.yml  nightly.yml  release.yml  test.yml
configs/: example.yaml  example_aisim.yaml  example_aisim_gravity_sweep.yaml  example_aisim_multi_drop.yaml  example_aisim_phase_scan.yaml  example_aisim_vibration_sweep.yaml  example_custom_allan.yaml  example_real_gravity.yaml  real_gravity_template.yaml  real_ifo_template.yaml  sweep_small.yaml
data/raw/: real_ifo_template.csv
data/raw/sg_sample/: SG station.txt  ap046.ggp
docs/: AISIM_GRAVIMETER_STUDIES.md  AISIM_INTEGRATION.md  AI_USAGE_DISCLOSURE.md  ARCHITECTURE.md  COMPLETE_GUIDE.md  GUI.md  PATCHES_AND_ARCHITECTURE_NOTES.md  PERFORMANCE.md  PHYSICS_REVIEW_PACKET.md  README.md  REAL_GRAVITY_DATA.md  REPRODUCTION.md  REVIEW_REQUEST_TEMPLATE.md  ROADMAP_V1_TO_V2.md  SCIENTIFIC_HARDENING.md  SCIENTIFIC_NOTES.md  SCIENTIFIC_PACKAGE_EVALUATION.md  V1_PHYSICS_UPGRADE.md  index.md  reviewer_notebook.ipynb
docs/THIRD_PARTY_LICENSES/: AISim-LICENSE.txt
docs/research/: FINDINGS_SUMMARY.md  README.md  RESEARCH_AISIM_PHYSICS.md  RESEARCH_FINITE_TAU.md  RESEARCH_FINITE_TAU_FORMULAS.md  RESEARCH_FREIER_2016.md  RESEARCH_HARDWARE_VENDORS.md  RESEARCH_HU_2013.md  RESEARCH_JOSS_SUBMISSION.md  RESEARCH_MENORET_2018.md  RESEARCH_OSS_COMPARISON.md  RESEARCH_REAL_DATA_SOURCES.md  RESEARCH_RECENT_BENCHMARKS.md  RESEARCH_REFERENCE_AUDIT.md  RESEARCH_REVIEWER_CONTACTS.md  RESEARCH_SUBPULSE.md  RESEARCH_VENUES.md
notebooks/: 01_simulation_demo.ipynb  02_algorithms_demo.ipynb  03_validation_demo.ipynb
paper/: paper.bib  paper.md
scripts/: batch_scan_stations.py  convert_ggp_to_csv.py  download_public_data.py  multi_station_comparison.py  run_aisim_example.sh  run_aisim_gravimeter_studies.sh  run_backend_comparison.sh  run_example.sh
src/qgrav/: __init__.py  cli.py  config.py  gui.py  pipeline.py  types.py  visuals.py
src/qgrav/algorithms/: __init__.py  baseline.py  improved.py
src/qgrav/bench_ifo/: __init__.py  real_gravity.py  real_ifo.py  virtual_ifo.py
src/qgrav/datasets/: __init__.py  _tides_hw95.py  corrections.py  gravimetry.py
src/qgrav/gui/: __init__.py  __main__.py  _tab_data_browser.py  _tab_editor.py  _tab_guides.py  _tab_results.py  _tab_setup_run.py  _tab_validation.py  app.py
src/qgrav/gui/widgets/: __init__.py  collapsible.py  metric_cards.py  scrollable_frame.py  tooltip.py
src/qgrav/metrics/: __init__.py  allan.py  psd.py  summary.py
src/qgrav/physics/: __init__.py  _seismic_models.py  atom_source.py  constants.py  ground_truth.py  noise_models.py  phase_models.py  pulse_sequence.py  readout_models.py  sensitivity_function.py  systematics.py
src/qgrav/pipeline/: __init__.py  _common.py  _gravity.py  _interferometer.py  _plots.py  _simulation.py
src/qgrav/reporting/: __init__.py  report.py
src/qgrav/sim_ai/: __init__.py  _adapter_core.py  _aisim_overrides.py  _config_run.py  _multi_drop.py  _scans.py  _sweeps.py  aisim_adapter.py  simple_ai.py
src/qgrav/validation/: __init__.py  benchmarks.py  compare.py  freier_2016_setup.py  hu_2013_setup.py  menoret_2018_setup.py  published_references.py  qutip_crosscheck.py  truth_checks.py  wu_2019_setup.py  xu_2022_setup.py
tests/: benchmark_aisim.py  conftest.py  test_ac_stark.py  test_aisim_adapter.py  test_algorithms.py  test_allan_edge_cases.py  test_audit_fixes.py  test_batch_scripts.py  test_bertoldi_finite_tau.py  test_chirped_laser.py  test_ci_packaging.py  test_cli.py  test_cli_imports.py  test_config_path_resolution.py  test_corrections.py  test_corrections_pm_ol.py  test_data_edge_cases.py  test_detection_noise.py  test_docs_build.py  test_gravity_mz_sequence.py  test_gravity_propagation.py  test_gui_import.py  test_gui_integration.py  test_gui_runtime_safety.py  test_metrics.py  test_multi_drop_cycle.py  test_multi_drop_realism.py  test_noise_id_v2.py  test_performance_guard.py  test_physics_constants.py  test_physics_models.py  test_pipeline.py  test_pipeline_aisim.py  test_pipeline_aisim_models.py  test_projection_noise.py  test_properties.py  test_published_references.py  test_published_references_values.py  test_published_validation_freier_2016.py  test_published_validation_secondary.py  (+18 more)
