[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgrav"
version = "0.9.3"
description = "Software-first quantum gravimeter R&D platform: simulation -> virtual/real bench -> algorithms -> validation -> report"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "GPL-3.0-or-later"}
authors = [{name="Aditya Prakash"}]
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "scipy>=1.6",  # Required by vendored allantools and vendor/aisim
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6.80"]

[project.scripts]
qgrav = "qgrav.cli:main"
qgrav-gui = "qgrav.gui:main"

[tool.setuptools.package-data]
"qgrav" = ["py.typed"]
"qgrav.vendor.allantools" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
