[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgrav"
version = "1.3.0"
description = "Software-first quantum gravimeter R&D platform: simulation -> virtual/real bench -> algorithms -> validation -> report"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Aditya Prakash", email = "aditya_2312res46@iitp.ac.in"}]
maintainers = [{name = "Aditya Prakash", email = "aditya_2312res46@iitp.ac.in"}]
keywords = [
  "atom interferometry", "gravimetry", "quantum sensors", "cold atoms",
  "Mach-Zehnder", "Allan deviation", "metrology", "simulation", "physics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "scipy>=1.6",  # Required by vendored allantools and vendor/aisim
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6.80"]
qutip = ["qutip>=4.7"]  # optional: independent cross-validation backend (v1.2.1)
benchmark = ["pytest-benchmark>=4.0"]  # optional: performance harness (v1.2.3)
docs = ["mkdocs-material>=9.5"]  # optional: build the documentation site locally

[project.scripts]
qgrav = "qgrav.cli:main"
qgrav-gui = "qgrav.gui:main"

[project.urls]
Homepage = "https://github.com/adityagit94/Quantum-Gravitometer"
Repository = "https://github.com/adityagit94/Quantum-Gravitometer"
Documentation = "https://adityagit94.github.io/Quantum-Gravitometer/"
Issues = "https://github.com/adityagit94/Quantum-Gravitometer/issues"
Changelog = "https://github.com/adityagit94/Quantum-Gravitometer/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"qgrav" = ["py.typed"]
"qgrav.vendor.allantools" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
lint.select = ["E", "F", "I", "B", "UP"]
lint.ignore = ["E501"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'); used for the published-reference benchmark regressions that run many multi-drop simulations.",
    "benchmark: performance micro-benchmarks (require pytest-benchmark; run with '-m benchmark').",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
