[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qgrav"
version = "1.3.0"
description = "Software-first quantum gravimeter R&D platform: simulation -> virtual/real bench -> algorithms -> validation -> report"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [{name = "Aditya Prakash", email = "aditya_2312res46@iitp.ac.in"}]
maintainers = [{name = "Aditya Prakash", email = "aditya_2312res46@iitp.ac.in"}]
keywords = [
  "atom interferometry", "gravimetry", "quantum sensors", "cold atoms",
  "Mach-Zehnder", "Allan deviation", "metrology", "simulation", "physics",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
dependencies = [
  "numpy>=1.23",
  "pyyaml>=6.0",
  "matplotlib>=3.7",
  "jinja2>=3.1",
  "scipy>=1.6",  # Required by vendored allantools and vendor/aisim
]

[project.optional-dependencies]
test = ["pytest>=7", "hypothesis>=6.80", "pytest-cov>=4"]
qutip = ["qutip>=4.7"]  # optional: independent cross-validation backend (v1.2.1)
benchmark = ["pytest-benchmark>=4.0"]  # optional: performance harness (v1.2.3)
docs = ["mkdocs-material>=9.5"]  # optional: build the documentation site locally

[project.scripts]
qgrav = "qgrav.cli:main"
qgrav-gui = "qgrav.gui:main"

[project.urls]
Homepage = "https://github.com/adityagit94/Quantum-Gravitometer"
Repository = "https://github.com/adityagit94/Quantum-Gravitometer"
Documentation = "https://adityagit94.github.io/Quantum-Gravitometer/"
Issues = "https://github.com/adityagit94/Quantum-Gravitometer/issues"
Changelog = "https://github.com/adityagit94/Quantum-Gravitometer/blob/main/CHANGELOG.md"

[tool.setuptools.package-data]
"qgrav" = ["py.typed"]
"qgrav.vendor.allantools" = ["*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Vendored third-party code (AISim, allantools) is never linted or reformatted;
# tests/test_vendor_aisim_unmodified.py guards its byte-level integrity.
extend-exclude = ["src/qgrav/vendor"]
lint.select = ["E", "F", "I", "B", "UP"]
# E741: single-letter physics notation (I for intensity, l for angular momentum)
# is standard in this domain; renaming numerics code is churn, not clarity.
lint.ignore = ["E501", "E741"]

[tool.ruff.lint.per-file-ignores]
# Package __init__ files re-export the public API surface.
"**/__init__.py" = ["F401"]
# These modules must configure MPLCONFIGDIR / the matplotlib backend before
# importing matplotlib.pyplot, so some imports cannot sit at the top.
"src/qgrav/gui/app.py" = ["E402"]
"src/qgrav/pipeline/_common.py" = ["E402"]
"src/qgrav/visuals.py" = ["E402"]
# Standalone script: sys.path bootstrap + Agg backend before pyplot.
"scripts/multi_station_comparison.py" = ["E402"]
# Notebook demo code: lambdas are idiomatic in cells.
"docs/reviewer_notebook.ipynb" = ["E731"]
# Regression-locked tide catalogue: lint config bends so the file never changes.
"src/qgrav/datasets/_tides_hw95.py" = ["B007"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]
# Vendored code is third-party; never reformat it (also applies when
# pre-commit passes filenames explicitly).
force-exclude = "qgrav/vendor/"

[tool.coverage.run]
source = ["qgrav"]
omit = ["src/qgrav/vendor/*", "*/qgrav/vendor/*"]

[tool.coverage.report]
precision = 1
show_missing = false

[tool.mypy]
python_version = "3.11"
files = ["src/qgrav"]
exclude = ["src/qgrav/vendor"]
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true

# Vendored code is third-party; never type-check it.
[[tool.mypy.overrides]]
module = "qgrav.vendor.*"
ignore_errors = true

# TODO(typing): the YAML-config dispatcher builds **kwargs dicts whose values
# mypy widens to `float | None`; typing it properly needs a TypedDict per study
# model. Disabled per-module rather than fixed to keep the diff mechanical.
[[tool.mypy.overrides]]
module = "qgrav.sim_ai.aisim_adapter"
disable_error_code = ["arg-type"]

# TODO(typing): pipeline modules pass config-derived `str` where Literal[...]
# is expected and index Optional bundles guarded by runtime checks mypy cannot
# see; needs cast()/TypedDict work.
[[tool.mypy.overrides]]
module = "qgrav.pipeline.*"
disable_error_code = ["arg-type", "index"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"'); used for the published-reference benchmark regressions that run many multi-drop simulations.",
    "benchmark: performance micro-benchmarks (require pytest-benchmark; run with '-m benchmark').",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
